@@ -1,4 +1,5 @@
 Changes towards version 0.2:
+- Added '-b' option to get PC Menus -PhracturedBlue
 - Check for a deadlock in savedgames and try to continue -PhracturedBlue
 - Added an option ('-a') to display 'PC-style' course-scan -PhracturedBlue
 - Fixed deadlock races in new FlushGraphics method -PhracturedBlue
